--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  button:disabled {
+    @apply cursor-not-allowed bg-gray-400 hover:scale-100 hover:bg-gray-400;
+  }
+}
