--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,10 +17,25 @@
   }
 }
 
+@keyframes fadeUp {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 .miniSpinner {
   width: 20px;
   height: 20px;
   border-radius: 50%;
   border: 4px solid #ffffff;
   animation: spin 1s linear infinite;
+}
+
+.animate-fadeUp {
+  animation: fadeUp 500ms ease-in;
 }
