--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   button:disabled {
-    @apply cursor-not-allowed hover:scale-100;
+    @apply cursor-not-allowed hover:scale-100 bg-primary-500 hover:bg-primary-500 text-gray-100 scale-100;
   }
 }
 
